--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .vertical-center {
+    height: calc(100vh - 64px);
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
